--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dev_dependencies:
   firebase_core: any
   flutter_local_notifications: ^16.1.0
   google_sign_in: ^6.1.6
+  firebase_database: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
