--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dev_dependencies:
   flutter_local_notifications: ^16.1.0
   google_sign_in: ^6.1.6
   firebase_database: any
+  web_socket_channel: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
